Modified to work with new NIPS website

--- a/nipsnice_template.html
+++ b/nipsnice_template.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>NIPS 2012 Accepted Papers</title>
+<title>NIPS 2013 Accepted Papers</title>
 
 <style>
 /* CSS */
@@ -277,10 +277,10 @@ $(document).ready(function(){
 <body>
 
 <div id ="titdiv">
-<h1>NIPS 2012 papers</h1>
-(in nicer format than <a href="http://books.nips.cc/nips25.html">this)</a><br />
-maintained by <a href="https://twitter.com/karpathy">@karpathy</a><br/>
-source code on <a href="https://github.com/karpathy/nipspreview">github</a>
+<h1>NIPS 2013 papers</h1>
+(in nicer format than <a href="http://papers.nips.cc/book/advances-in-neural-information-processing-systems-26-2013">this)</a><br />
+original by <a href="https://twitter.com/karpathy">@karpathy</a>, modified by <a href="https://joejacobs.me/">Joseph Jacobs</a><br/>
+source code on <a href="https://github.com/joejacobs/confpapers">github</a>
 </div>
 
 <div id="maindiv">
